<resources>
    <string name="app_name">IMC</string>
    <string name="label_peso">Peso (ex 65.8 kg)</string>
    <string name="label_altura">Altura(ex: 1,78m)</string>
    <string name="label_btn_calc">Calcular</string>
    <string name="label_result" />
    <string name="label_title">Indice de Massa Corporal</string>
    <string name="label_imc_16">Muito abaixo do peso</string>
    <string name="label_imc_17">Abaixo do peso</string>
    <string name="label_imc_18_5">Peso normal</string>
    <string name="label_imc_25">Acima do peso</string>
    <string name="label_imc_30">Obesidade Grau I</string>
    <string name="label_imc_35">Obesidade Grau II</string>
    <string name="label_imc_40_1">Obesidade Grau III</string>
    <string name="label_imc_Invalid">Valores invalido!</string>
    <string name="label_Symptoms_16">Queda de cabelo, infertilidade, ausência menstrual</string>
    <string name="label_Symptoms_17">Fadiga, stress, ansiedade</string>
    <string name="label_Symptoms_18_5">Menor risco de doenças cardíacas e vasculares</string>
    <string name="label_Symptoms_25">Fadiga, má circulação, varizes</string>
    <string name="label_Symptoms_30">Diabetes, angina, infarto, aterosclerose</string>
    <string name="label_Symptoms_35">Apneia do sono, falta de ar</string>
    <string name="label_Symptoms_40">Refluxo, dificuldade para se mover, escaras, diabetes, infarto, AVC</string>
    <string name="label_increase_BMI">\" O que fazer para aumentar o IMC\"</string>
    <string name="label_text_increase_BMI">Se o resultado do IMC estiver abaixo do ideal, o que se deve fazer é aumentar a ingestão de alimentos ricos em vitaminas e minerais de boa qualidade, mas sem cair no erro de comer alimentos processados e ricos em gordura trans. Pizzas, frituras, cachorro quente e hambúrguer não são os melhores alimentos para quem precisa aumentar o peso de forma saudável, porque este tipo de gordura pode se acumular no interior das artérias, aumentando o risco de doença cardíaca.</string>
    <string name="label_fill_error">\"Por favor preencha os campos de Altura e Peso. \"</string>
    <string name="label_title_IMC">Índice de massa corporal</string>
    <string name="label_about_text">O índice de massa corporal (IMC) é uma medida internacional usada para calcular se uma pessoa está no peso ideal. Desenvolvido pelo polímata Lambert Quételet no fim do século XIX, trata-se de um método fácil e rápido para a avaliação do nível de gordura de cada pessoa, sendo, por isso, um preditor internacional de obesidade adotado pela Organização Mundial da Saúde (OMS).</string>
    <string name="label_subtitle_IMC">Como calcular</string>
    <string name="label_text_calc">O IMC é determinado pela divisão da massa do indivíduo pelo quadrado de sua altura, em que a massa está em quilogramas e a altura em metros.</string>
    <string name="label_font">Fonte: https://pt.wikipedia.org/wiki/%C3%8Dndice_de_massa_corporal</string>
    <string name="label_btn_return">Retornar</string>
    <string name="label_tiltle_symptoms">O que pode acontecer</string>
    <string name="label_text_test">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</string>
    <string name="label_number_test">00,00</string>
    <string name="label_download_BMI">O que fazer para baixar o IMC</string>
    <string name="label_text_download_BMI">Se o resultado do IMC estiver acima do ideal e a pessoa não for muito musculosa, nem atleta, pode indicar que é preciso emagrecer, eliminando o acúmulo de gordura, que contribui para o peso alto. Para isso deve-se comer somente alimentos ricos em vitaminas e minerais, tendo o cuidado de diminuir o consumo de alimentos industrializados e ricos em gordura, como massa folheada, bolos, biscoitos recheados e salgadinhos, por exemplo. Para que os resultados sejam alcançados ainda mais rápido é aconselhado fazer exercícios para aumentar o gasto calórico e aumentar o metabolismo. Recorrer a chás e suplementos naturais pode ser um estímulo para ajudar a emagrecer de forma mais rápida e saudável, sem ter que passar fome. Alguns exemplos são o chá de hibisco ou o chá de gengibre com canela, mas um nutricionista poderá indicar outros que sejam mais adequados às necessidades de cada pessoa</string>
    <string name="label_text_test_result">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="label_tiltle_test_result">O que é Lorem Ipsum?</string>
    <string name="label_tiltle_result">Seu IMC é:</string>
    <string name="label_font_help">Fonte: https://www.tuasaude.com/imc/</string>
    <string name="label_info">Saiba mais</string>
    <string name="label_warning">Preencha o campo Altura e o campo Peso!</string>
    <string name="label_text_error">Os valores digitado não se enquadram nos paranmentros do calculo do IMC.</string>
    <string name="label_text_warnner">Revise os números digitado.</string>
    <string name="label_text_result">Segundo os padrões internacionais você foi considerado como</string>
</resources>