<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/titleAbout"
        android:text="@string/label_title_IMC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/general_title" />

    <TextView
        android:id="@+id/txtAbout"
        android:text="@string/label_about_text"
        app:layout_constraintTop_toBottomOf="@id/titleAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/general_text" />

   <TextView
        android:id="@+id/subtitleAbout"
        android:text="@string/label_subtitle_IMC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAbout"
       style="@style/general_title"/>

   <TextView
        android:id="@+id/txtCalc"
        android:text="@string/label_text_calc"
        app:layout_constraintTop_toBottomOf="@id/subtitleAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/general_text"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgFormula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCalc"
        app:srcCompat="@drawable/ic_imc"
        style="@style/formula" />


    <TextView
        android:id="@+id/txtSource"
        android:text="@string/label_font"
        app:layout_constraintBottom_toTopOf="@id/returnBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/sourceItalic" />


    <Button
        android:id="@+id/returnBtn"
        android:text="@string/label_btn_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/general_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>