<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleApp"
        android:text="@string/label_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title_app" />

    <TextView
        android:id="@+id/info"
        android:text="@string/label_info"
        app:layout_constraintTop_toBottomOf="@id/titleApp"
        app:layout_constraintEnd_toStartOf="@+id/aboutBtn"
        style="@style/info" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aboutBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleApp"
        app:srcCompat="@drawable/ic_info"
        style="@style/img_info" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/alturaEdt"
        android:hint="@string/label_altura"
        app:layout_constraintBottom_toBottomOf="@id/pesoEdt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/aboutBtn"
        app:layout_constraintVertical_bias="0.348"
        style="@style/input"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pesoEdt"
        android:hint="@string/label_peso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/alturaEdt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348"
        style="@style/input"/>


    <Button
        android:id="@+id/calcBtn"
        android:text="@string/label_btn_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/general_btn"/>


</androidx.constraintlayout.widget.ConstraintLayout>